fix align items

--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ body {
     font-style: normal;
     color: #373737;
     font-size: 14px;
+    display: flex;justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .col-sm-12 {
     flex: 0 0 auto;
@@ -25,6 +28,8 @@ body {
 }
 .container, .container-sm {
     max-width: 540px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .ds-header {
     position: fixed;
